# MiniRedisDesktop

./: CMakeLists.txt  README.md  test_products.csv
include/: business_data.h  business_panel.h  console_panel.h  key_browser.h  log.h  mainwindow.h  monitor_panel.h  redis_client.h  resp_codec.h  server_manager.h  stats_dashboard.h  value_viewer.h
mini_redis/: CMakeLists.txt
mini_redis/include/: db.h  epoll.h  resp_parser.h
mini_redis/src/: command.cpp  db.cpp  epoll.cpp  resp_parser.cpp  server.cpp
src/: business_data.cpp  business_panel.cpp  console_panel.cpp  key_browser.cpp  main.cpp  mainwindow.cpp  monitor_panel.cpp  redis_client.cpp  server_manager.cpp  stats_dashboard.cpp  value_viewer.cpp
